WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65910
JavaMethodJobject is no longer needed by V8
https://bugs.webkit.org/show_bug.cgi?id=65910
Summary
JavaMethodJobject is no longer needed by V8
Steve Block
Reported
2011-08-09 05:00:28 PDT
After
http://trac.webkit.org/changeset/92659
, JavaMethodJobject is not used by V8. We can therefore remove the JavaScript engine-independent interface JavaMethod and move the implementation to WebCore/bridge/jni/jsc.
Attachments
Patch
(38.04 KB, patch)
2011-08-09 06:41 PDT
,
Steve Block
tonyg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2011-08-09 06:41:20 PDT
Created
attachment 103354
[details]
Patch
Steve Block
Comment 2
2011-08-09 07:19:15 PDT
Committed
r92681
: <
http://trac.webkit.org/changeset/92681
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug