Source/WebCore/bridge/jni/jsc/JavaMethodJSC.h
@@ -24,15 +24,14 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef JavaMethod_h
-#define JavaMethod_h
+#ifndef JavaMethodJSC_h
+#define JavaMethodJSC_h
 
 #if ENABLE(JAVA_BRIDGE)
 
 #include "Bridge.h"
+#include "JavaString.h"
 #include "JavaType.h"
-
-#include <wtf/text/WTFString.h>
 
 namespace JSC {
 
@@ -42,14 +41,26 @@ typedef const char* RuntimeType;
 
 class JavaMethod : public Method {
 public:
-    virtual ~JavaMethod() {}
+    JavaMethod(JNIEnv*, jobject aMethod);
+    ~JavaMethod();
 
-    virtual String name() const = 0;
-    virtual RuntimeType returnTypeClassName() const = 0;
-    virtual String parameterAt(int) const = 0;
-    virtual const char* signature() const = 0;
-    virtual JavaType returnType() const = 0;
-    virtual bool isStatic() const = 0;
+    const String name() const { return m_name.impl(); }
+    RuntimeType returnTypeClassName() const { return m_returnTypeClassName.utf8(); }
+    const String parameterAt(int i) const { return m_parameters[i]; }
+    const char* signature() const;
+    JavaType returnType() const { return m_returnType; }
+    bool isStatic() const { return m_isStatic; }
+
+    // Method implementation
+    int numParameters() const { return m_parameters.size(); }
+
+private:
+    Vector<WTF::String> m_parameters;
+    JavaString m_name;
+    mutable char* m_signature;
+    JavaString m_returnTypeClassName;
+    JavaType m_returnType;
+    bool m_isStatic;
 };
 
 } // namespace Bindings
@@ -58,4 +69,4 @@ public:
 
 #endif // ENABLE(JAVA_BRIDGE)
 
-#endif // JavaMethod_h
+#endif // JavaMethodJSC_h
